--- a/formulario.html
+++ b/formulario.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário</title>
+    <title>Formulário de cadastro</title>
 </head>
 <body>
     <h1>Formulário</h1>
+   <form>
+    <label>Seu Nome</label>
+    <input type="text"/>
+    <br>
+    <label>Seu Email</label>
+    <input type="email"/>
+    <br>
+    <label>Senha</label>
+    <input type="password"/>
+    <br>
+   </form>
+   <button>Cadastrar</button>
    
  
     
