--- a/Conteiners.html
+++ b/Conteiners.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Conteiners</h1>
         <nav>
-            <a href="./index.html.html">Home</a>
+            <a href="./index.html">Home</a>
         </nav>
     </header>
     <main>
