--- a/listas.html
+++ b/listas.html
@@ -7,6 +7,27 @@
     <title>Listas</title>
 </head>
 <body>
+    <header>
+        <h1>Listas</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Listas Ordenadas</h2>
+            <ol>
+                <li>Primeiro item</li>
+                <li>Segundo item</li>
+                <li>Terceiro item</li>
+            </ol>
+        </section>
+        <section>
+            <h2>Lista não ordenadas</h2>
+            <ul>
+                <li>Primeiro item</li>
+                <li>Segundo item</li>
+                <li>Terceiro item</li>
+            </ul>
+        </section>
+    </main>
     
 </body>
 </html>
