Adicionando link da pagina de tabelas no index e criando tabela

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <hr>
     <h2>Links</h2>
     <a href="https://google.com" title="Ir para o site do Googler" >Ir para o Google</a>
+    <br>
     <a href="tel:+5547991073225">47991073225</a>
+    <br>
     <a href="mailto:edmiltonsnts@gmail.com">Meu email</a>
     <hr>
     <blockquote>
@@ -32,8 +34,11 @@
         Rua Letivina Veber, n 20, Dom Bosco, Luiz Alves - SC - CEP 89128000
     </address>
     <hr>
-    <a href="./Conteiners.html">Ir para a pagina de conteiners</a>
-    <a href="./listas.html">Ir para a pagina de listas</a>
+    <a href="./Conteiners.html"> Ir para a pagina de conteiners </a>
+    <br>
+    <a href="./listas.html"> Ir para a pagina de listas </a>
+    <br>
+    <a href="./tabelas.html"> Ir para a pagina de tabelas </a>
     
 </body>
 </html>
