--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Shop - a sua loja de games</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -26,11 +29,16 @@
     </header>
     <section>
         <div class="container">
-            <img src="./images/loja.jpg" alt="fachada loja de games">
+            <img  class="store-front" src="./images/loja.jpg" alt="fachada loja de games">
             <div>
                 <h2>Sobre a loja</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam rem, cum, eaque molestiae est impedit quod quia natus ratione dolor aliquid soluta ut quisquam dicta consequuntur itaque reprehenderit molestias? Explicabo.</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit sed possimus perferendis nesciunt debitis sequi impedit eaque, ipsam quisquam minus maiores minima? Non labore delectus laboriosam dolore itaque officia sit.</p>
+                <ul class="brands-list">
+                    <li><img src="./images/nintendo.png" alt="nintendo"></li>
+                    <li><img src="./images/xbox.png" alt="xbox"></li>
+                    <li><img src="./images/playstation.png" alt="playstation"></li>
+                </ul>
             </div>
         </div>
     </section>
