--- a/index.html
+++ b/index.html
@@ -42,6 +42,41 @@
             </div>
         </div>
     </section>
+    <section class="contact">
+        <div class="container">
+            <h2>Contato</h2>
+            <div class="contact-methods">
+                <h3>Fale conosco</h3>
+                <form>
+                    <input type="text" name="nome" placeholder="Seu nome"/>              
+                    <input type="email" name="email" placeholder="Seu email"/>
+                    <input type="tel" name="tel" placeholder="Seu telefone"/>
+                    <textarea name="mensagem"  placeholder="Sua mensagem"></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </div>
+            <div>
+                <h2>Nos acompanhe</h2>
+                <ul class="social-links">
+                    <li> 
+                        <a href="#" title="Siga-nos no Instagram"> <img src="./images/instagram.png" alt="logo instagram"></a>
+                    </li>
+                    <li> 
+                        <a href="#" title="Siga-nos no facebook"> <img src="./images/facebook.png" alt="logo facebook"></a>
+                    </li>
+                    <li> 
+                        <a href="#" title="Visete nosso canal no youtube"> <img src="./images/instagram.png" alt="logo youtube"></a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Nosso endereço</h2>
+                <p>
+                    Rua JavaScript n°124, Vila HTML - CSS - SP - CEP-12346-000
+                </p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
