--- a/Projeto2/index.html
+++ b/Projeto2/index.html
@@ -22,7 +22,7 @@
             <input type="number" requered placeholder="Nota da atividade" min="0" max="10">
             <button type="submit">Adicionar +</button>
         </form>
-        <table>
+        <table cellspacing="0">
             <thead>
                 <tr>
                     <th>Nome da atividade</th>
@@ -41,7 +41,7 @@
                 <tr>
                     <td>Média final</td>
                     <td>7</td>
-                    <td>Aprovado</td>
+                    <td><span class="resultado reprovado">Aprovado</span></td>
                 </tr>
             </tfoot>
         </table>
