--- a/Projeto2/index.html
+++ b/Projeto2/index.html
@@ -17,9 +17,9 @@
             <img src="./images/logo.png" alt="capelo de diploma">
             <h1>Calculadora de médias</h1>
         </header>
-        <form>
-            <input type="text" requered placeholder="Nome da atividade">
-            <input type="number" requered placeholder="Nota da atividade" min="0" max="10">
+        <form id="form-atividade">
+            <input type="text" id="nome-atividade" required placeholder="Nome da atividade"/>
+            <input type="number" id="nota-atividade" required placeholder="Nota da atividade" min="0" max="10"/>
             <button type="submit">Adicionar +</button>
         </form>
         <table cellspacing="0">
@@ -31,20 +31,16 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Atividade 1</td>
-                    <td>7</td>
-                    <td><img src="./images/aprovado.png" alt="Emoji festas"></td>
-                </tr>
             </tbody>
             <tfoot>
                 <tr>
                     <td>Média final</td>
                     <td>7</td>
-                    <td><span class="resultado reprovado">Aprovado</span></td>
+                    <td><span class="resultado reprovado">Reprovado</span></td>
                 </tr>
             </tfoot>
         </table>
     </div>
+    <script src="./main.js"></script>
 </body>
 </html>
