--- a/Projeto2/index.html
+++ b/Projeto2/index.html
@@ -35,8 +35,8 @@
             <tfoot>
                 <tr>
                     <td>Média final</td>
-                    <td>7</td>
-                    <td><span class="resultado reprovado">Reprovado</span></td>
+                    <td id="media-final-valor" >---</td>
+                    <td id="media-final-resultado">---</span></td>
                 </tr>
             </tfoot>
         </table>
